--- a/calculadora/calculadora.html
+++ b/calculadora/calculadora.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/estilos.css">
+    <link rel="stylesheet" href="https://teresa08.github.io/calculadora/calculadora/estilos.css">
     <link rel="stylesheet" href="js/app.js">
     <title>Document</title>
 </head>
