--- a/calculadora/calculadora.html
+++ b/calculadora/calculadora.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://teresa08.github.io/calculadora/calculadora/estilos.css">
-    <link rel="stylesheet" href="js/app.js">
+    <link rel="stylesheet" href="https://teresa08.github.io/calculadora/calculadora/js/app.js">
     <title>Document</title>
 </head>
 
@@ -39,7 +39,7 @@
         </div>
     </div>
     <script src="https://kit.fontawesome.com/88b43d12f7.js" crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
+    <script src="https://teresa08.github.io/calculadora/calculadora/js/app.js"></script>
 </body>
 
 </html>
